--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mqtt": "^3.0.0",
-    "mqtt-router": "^0.5.0"
+    "cron": "^1.7.2",
+    "mqtt": "^3.0.0"
   }
 }
